# network_builder/openapiv3/eda_oas_network-builder.eda.local_circuitgenies.json
@@ -60,6 +60,27 @@
             "ui-order-priority": 100,
             "ui-column-span": 2
           }
+        },
+        "subnet": {
+          "description": "Select interface from Port Library.",
+          "type": "array",
+          "title": "subnet",
+          "items": {
+            "type": "string"
+          },
+          "x-eda-nokia-com": {
+            "ui-auto-completes": [
+              {
+                "condition": "true",
+                "type": "gvr",
+                "group": "network-builder.eda.local",
+                "version": "v1alpha1",
+                "resource": "subnetgenies"
+              }
+            ],
+            "ui-order-priority": 100,
+            "ui-column-span": 3
+          }
         }
       },
       "x-eda-nokia-com": {
